k8s/deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: votingapp
spec:
  replicas: 3
  selector:
    matchLabels:
      run: votingapp
  template:
    metadata:
      labels:
        run: votingapp
    spec:
      containers:
      - image: votingapp:6
        name: votingapp
        livenessProbe: 
          httpGet:
            path: /hc/live
            port: 80
        readinessProbe: 
          httpGet:
            path: /hc/ready
            port: 80
