k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: votingapp-beta
  name: votingapp
spec:
  containers:
  - image: votingapp:1
    name: votingapp
