k8s/tools.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: tools
  name: tools
spec:
  containers:
  - name: curl
    image: tutum/curl
    command:
    - sleep
    - infinity
  - name: dnsutils
    image: tutum/dnsutils
    command:
    - sleep
    - infinity
