k8s/petset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
spec:
  serviceName: database
  replicas: 3
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - image: mongo:4
        name: database
        volumeMounts:
        - name: data
          mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        resources:
          requests:
            storage: 1Gi
        accessModes:
          - ReadWriteOnce
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: database
  name: database
spec:
  ports:
  - port: 27017 
    protocol: TCP
    targetPort: 27017 
  selector:
    run: database 
  clusterIP: None
