k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: votingapp
  name: votingapp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: votingapp
  type: ClusterIP
